Added Zectium Core

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -42,6 +42,7 @@ invisium_ingot.name=Invisium Ingot
 ultra_gem.name=Ultra Gem
 white_luminite_crystal.name=White Luminite Crystal
 
+zectium_core.name=Zectium Core
 
 # PICKAXE LIST 
 meteorite_pickaxe.name=Meteorite Pickaxe
@@ -220,6 +221,7 @@ itemGroup.crazyOresArmo=CrazyOres Armor
 # CONFIG LOCALIZATION
 config.category.loadPacks=Load Packs
 config.category.oreGeneration=Ore Generation
+config.category.miscSettings=Miscellaneous Settings
 
 config.node.installFoodsPack=Foods Pack
 
@@ -246,6 +248,8 @@ config.node.generateDarkstone=Generate_Darkstone
 config.node.generateLuminite=Generate_Luminite_Ore
 config.node.generateEnder=Generate_Ender_Ore
 config.node.generateUltra=Generate_Ultra_Ore
+
+config.node.zectiumCoreExplodes=Zectium Core Explodes When Thrown
 
 config.comment.generateCopper=true: will generate copper | false: won't generate copper
 config.comment.generateSapphire=Set this to true to have Sapphire Crystal generated in your world. Set this to false to stop Sapphire Crystal from generating in your world.
