--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -77,6 +77,7 @@ ultra_gem.name=Ultra Gem
 white_luminite_crystal.name=White Luminite Crystal
 
 zectium_core.name=Zectium Core
+invisium_wand.name=Invis O' Wand
 
 # PICKAXE LIST 
 meteorite_pickaxe.name=Meteorite Pickaxe
