--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -234,13 +234,13 @@ ender_bow.name=Ender Bow
 starconium_bow.name=Starconium Bow
 
 # ARROW LIST 
-meteorite_arrow.name=Meteorite Arrow
-copper_arrow.name=Copper Arrow
+meteorite_arrow.name=Flaming Arrow (needs texture)
+copper_arrow.name=Electric Arrow (needs texture)
 invisium_arrow.name=Invisium Arrow
-sapphire_arrow.name=Sapphire Arrow
+sapphire_arrow.name=Freezing Arrow (needs texture)
 adamite_arrow.name=Adamite Arrow
 ruby_arrow.name=Ruby Arrow
-zectium_arrow.name=Zectium Arrow
+zectium_arrow.name=Explosive Arrow (needs texture)
 tapazite_arrow.name=Tapazite Arrow
 osmonium_arrow.name=Osmonium Arrow
 ender_arrow.name=Ender Arrow
