--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -36,11 +36,11 @@ darkstone_block.name=Darkstone Block
 
 ender_block.name=Ender Block
 
-demonite_furnace.name=Demonite Furnace
-demonite_furnace_lit.name=Demonite Furnace
+demonite_furnace.name=Demonite Doubler
+demonite_furnace_lit.name=Demonite Doubler
 
 # GUI LOCALIZATION
-container.demonite_furnace=Demonite Furnace
+container.demonite_furnace=Demonite Doubler
 
 # ITEM LOCALIZATION
 tapazite_stalagmite_0.name=Tapazite Stalagmite Phase 1
