--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -90,7 +90,8 @@ entity.crazyores_core.ender_golem.name=Ender Golem
 
 entity.crazyores_core.flaming_arrow.name=Flaming Arrow
 entity.crazyores_core.explosive_arrow.name=Explosive Arrow
-
+entity.crazyores_core.electric_arrow.name=Electric Arrow
+entity.crazyores_core.freezing_arrow.name=Freezing Arrow
 
 tileentity.crazyores_core.tapazite_crystal.name=Tapazite Crystal
 tileentity.crazyores_core.demonite_furnace.name=Demonite Furnace
@@ -280,14 +281,14 @@ starconium_bow.name=Starconium Bow
 
 # ARROW LIST 
 meteorite_arrow.name=Flaming Arrow (needs texture)
-copper_arrow.name=Electric Arrow (needs texture)
+adamite_arrow.name=Electric Arrow (needs texture)
 invisium_arrow.name=Invisium Arrow
-sapphire_arrow.name=Freezing Arrow (needs texture)
-adamite_arrow.name=Adamite Arrow
+osmonium_arrow.name=Freezing Arrow (needs texture)
+copper_arrow.name=Adamite Arrow
 ruby_arrow.name=Ruby Arrow
 zectium_arrow.name=Explosive Arrow (needs texture)
 tapazite_arrow.name=Tapazite Arrow
-osmonium_arrow.name=Osmonium Arrow
+sapphire_arrow.name=Osmonium Arrow
 ender_arrow.name=Ender Arrow
 starconium_arrow.name=Starconium Arrow
 
