--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -90,7 +90,7 @@ entity.crazyores_core.ender_golem.name=Ender Golem
 
 entity.crazyores_core.flaming_arrow.name=Flaming Arrow
 entity.crazyores_core.explosive_arrow.name=Explosive Arrow
-entity.crazyores_core.electric_arrow.name=Electric Arrow
+entity.crazyores_core.lightning_arrow.name=Lightning Arrow
 entity.crazyores_core.freezing_arrow.name=Freezing Arrow
 
 tileentity.crazyores_core.tapazite_crystal.name=Tapazite Crystal
@@ -267,7 +267,9 @@ invisium_rod.name=Invisium Rod
 ender_rod.name=Ender Rod
 
 # BOW LIST 
-meteorite_bow.name=Meteorite Bow
+meteorite_bow.name=Hell Bow (needs texture)
+
+
 copper_bow.name=Copper Bow
 invisium_bow.name=Invisium Bow
 sapphire_bow.name=Sapphire Bow
@@ -275,13 +277,15 @@ adamite_bow.name=Adamite Bow
 ruby_bow.name=Ruby Bow
 zectium_bow.name=Zectium Bow
 tapazite_bow.name=Tapazite Bow
-osmonium_bow.name=Osmonium Bow
+
+osmonium_bow.name=Swift Bow (needs texture)
+
 ender_bow.name=Ender Bow
 starconium_bow.name=Starconium Bow
 
 # ARROW LIST 
 meteorite_arrow.name=Flaming Arrow (needs texture)
-adamite_arrow.name=Electric Arrow (needs texture)
+adamite_arrow.name=Lightning Arrow (needs texture)
 invisium_arrow.name=Invisium Arrow
 osmonium_arrow.name=Freezing Arrow (needs texture)
 copper_arrow.name=Adamite Arrow
@@ -297,6 +301,8 @@ itemGroup.crazyOresBlocks=CrazyOres Blocks
 itemGroup.crazyOresItems=CrazyOres Items
 itemGroup.crazyOresTools=CrazyOres Tools
 itemGroup.crazyOresArmor=CrazyOres Armor
+itemGroup.crazyOresWeapons=CrazyOres Weapons
+itemGroup.crazyOresFood=CrazyOres Food
 
 # CONFIG LOCALIZATION
 config.category.loadPacks=Load Packs
