Added ability for sharks to follow and attack pigs, sheep, cows, chicken, villagers, and horses. Fixed shark spawn eggs

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -138,7 +138,7 @@ tileentity.crazyores_core.demonite_furnace.name=Demonite Furnace
 #SPAWN EGGS
 zectium_protector_egg.name=Spawn Zectium Protector
 great_white_shark_egg.name=Spawn Great White Shark
-adamite_shark_egg.name=Adamite Shark
+adamite_shark_egg.name=Spawn Torpedo Shark
 
 # ORE DROPS 
 meteorite_coal.name=Meteorite Coal
