Fixed name of Disco block

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -97,7 +97,7 @@ luminite_block_purple.name=Purple Luminite Block
 luminite_block_pink.name=Pink Luminite Block
 luminite_block_black.name=Black Luminite Block
 
-luminite_disco_block.name=Luminite Disco Block
+luminite_disco.name=Luminite Disco Block
 
 
 # GUI LOCALIZATION
