Fixed lightened brick glitch. Added some unique features to golems.

--- a/src/main/resources/assets/crazyores_core/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores_core/lang/en_US.lang
@@ -314,7 +314,7 @@ birthday_cake_placer.name=Birthday Cake
 raw_shark_meat.name=Raw Shark Meat
 cooked_shark_meat.name=Cooked Shark Meat
 
-lightened_brick.name=Lightened Brick
+lightened_brick_item.name=Lightened Brick
 
 luminite_crystal_white.name=White Luminite Crystal
 luminite_crystal_red.name=Red Luminite Crystal
