Fixed naming for entities.

--- a/src/main/resources/assets/crazyores/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores/lang/en_US.lang
@@ -125,31 +125,31 @@ tapazite_stalactite_6.name=Tapazite Stalactite Phase 7
 
 #ENTITY LOCALIZATION
 
-entity.crazyores_core.zectium_core.name=Zectium Core
-entity.crazyores_core.copper_golem.name=Copper Golem
-entity.crazyores_core.sapphire_golem.name=Sapphire Golem
-entity.crazyores_core.adamite_golem.name=Adamite Golem
-entity.crazyores_core.ruby_golem.name=Ruby Golem
-entity.crazyores_core.fools_ruby_golem.name=Fool's Ruby Golem
-entity.crazyores_core.zectium_golem.name=Zectium Golem
-entity.crazyores_core.tapazite_golem.name=Tapazite Golem
-entity.crazyores_core.osmonium_golem.name=Osmonium Golem
-entity.crazyores_core.starconium_golem.name=Starconium Golem
-entity.crazyores_core.demonite_golem.name=Demonite Golem
-entity.crazyores_core.ender_golem.name=Ender Golem
+entity.crazyores.zectium_core.name=Zectium Core
+entity.crazyores.copper_golem.name=Copper Golem
+entity.crazyores.sapphire_golem.name=Sapphire Golem
+entity.crazyores.adamite_golem.name=Adamite Golem
+entity.crazyores.ruby_golem.name=Ruby Golem
+entity.crazyores.fools_ruby_golem.name=Fool's Ruby Golem
+entity.crazyores.zectium_golem.name=Zectium Golem
+entity.crazyores.tapazite_golem.name=Tapazite Golem
+entity.crazyores.osmonium_golem.name=Osmonium Golem
+entity.crazyores.starconium_golem.name=Starconium Golem
+entity.crazyores.demonite_golem.name=Demonite Golem
+entity.crazyores.ender_golem.name=Ender Golem
 
-entity.crazyores_core.zectium_protector.name=Zectium Protector
+entity.crazyores.zectium_protector.name=Zectium Protector
 
-entity.crazyores_core.great_white_shark.name=Great White Shark
-entity.crazyores_core.adamite_shark.name=Torpedo Shark
+entity.crazyores.great_white_shark.name=Great White Shark
+entity.crazyores.adamite_shark.name=Torpedo Shark
 
-entity.crazyores_core.flaming_arrow.name=Flaming Arrow
-entity.crazyores_core.explosive_arrow.name=Explosive Arrow
-entity.crazyores_core.lightning_arrow.name=Lightning Arrow
-entity.crazyores_core.freezing_arrow.name=Freezing Arrow
+entity.crazyores.flaming_arrow.name=Flaming Arrow
+entity.crazyores.explosive_arrow.name=Explosive Arrow
+entity.crazyores.lightning_arrow.name=Lightning Arrow
+entity.crazyores.freezing_arrow.name=Freezing Arrow
 
-tileentity.crazyores_core.tapazite_crystal.name=Tapazite Crystal
-tileentity.crazyores_core.demonite_furnace.name=Demonite Furnace
+tileentity.crazyores.tapazite_crystal.name=Tapazite Crystal
+tileentity.crazyores.demonite_furnace.name=Demonite Furnace
 
 #SPAWN EGGS
 zectium_protector_egg.name=Spawn Zectium Protector
