Fixed language file.

--- a/src/main/resources/assets/crazyores/lang/en_US.lang
+++ b/src/main/resources/assets/crazyores/lang/en_US.lang
@@ -55,7 +55,7 @@ birthday_cake.name=Birthday Cake
 
 zectium_protector_spawner.name=Zectium Protector Spawner
 great_white_shark_spawner.name=Great White Shark Spawner
-adamite_shark_spawner.name=Adamite Shark Spawner
+adamite_shark_spawner.name=Torpedo Shark Spawner
 
 reinforced_glass.name=Reinforced Glass
 smooth_reinforced_glass.name=Smooth Reinforced Glass
